# rust-in-depth

./: .gitignore  Cargo.toml
actix-web-demo/: Cargo.toml
actix-web-demo/src/: main.rs
design-pattern/: Cargo.toml
design_pattern/: Cargo.toml
embeded/: Cargo.toml
enbeded/: Cargo.toml
example_code/: Cargo.toml
example_code/src/: dont_assign_to_a_borrowed_value.rs  guessing_game.rs  main.rs
lang/: Cargo.toml
lang/src/: lib.rs
lang/src/prelude/: mod.rs  output.rs
lang/src/types/: enum_practice.rs  enum_to_number.rs  mod.rs
leetcode/: Cargo.toml
leetcode/src/: main.rs
leetcode/src/leetcode/editor/cn/: longestPalindromicSubstring_5.rs
leetcode/src/leetcode/editor/cn/doc/content/: longestPalindromicSubstring_5.md
tower/: Cargo.toml
tower/src/: layer.rs  lib.rs  service.rs
web-axum/: Cargo.toml
