[workspace]
resolver = "2"
members = [

    "design-pattern/behavioral/chain-of-responsibility",
    "design-pattern/behavioral/command",
    "design-pattern/behavioral/iterator",
    "design-pattern/behavioral/mediator",
    "design-pattern/behavioral/memento",
    "design-pattern/behavioral/observer",
    "design-pattern/behavioral/state",
    "design-pattern/behavioral/strategy",
    "design-pattern/behavioral/template-method",
    "design-pattern/behavioral/visitor",
    "design-pattern/creational/abstract-factory/app",
    "design-pattern/creational/abstract-factory/app-dyn",
    "design-pattern/creational/builder",
    "design-pattern/creational/factory-method/maze-game",
    "design-pattern/creational/factory-method/render-dialog",
    "design-pattern/creational/prototype",
    "design-pattern/creational/simple-factory",
    "design-pattern/creational/singleton/how-to-create",
    "design-pattern/creational/singleton/logger",
    "design-pattern/creational/static-creation-method",
    "design-pattern/structural/adapter",
    "design-pattern/structural/bridge",
    "design-pattern/structural/composite",
    "design-pattern/structural/decorator",
    "design-pattern/structural/facade",
    "design-pattern/structural/flyweight",
    "design-pattern/structural/proxy",
    "lang",
    "leetcode",
    "web-axum",
    "embeded",
    "tower"
]
